v.1.4.1.2
- updated featured artist parsing to support radio streams
- updated featured artist title search to support calls from external scripts
- added notification if no images downloaded
- set first image download notification to not repeat as often

v.1.4.1.1
- added ability to override artist bio, albums, and similar artists with local info
- fixed bug when using both local and remote images
- added French localization strings and description (thanks to mikebzh44)
- UTF8 encoded message strings

v.1.4.1
- updated language files for Portuguese-Brazil (thanks to Wanilton)
- fixed error causing information for 50th album to not be cleared

v.1.4.0
- added ability to display artwork from multiple artists simultaneously
- added option for a folder name other than extrafanart
- added notification when downloading first image for an artist
- added option for user to set image to use during download of first artist image

v1.3.2
- added language files for Portuguese-Brazil (thanks to Wanilton)

v1.3.1
- changes to support for internet streams
- fixed bug that caused artist .nfo files to never be updated

v1.3.0
- updated refresh during download logic to make it more aesthetically pleasing
- refresh during downloads is now the default (and non-optional) behavior
- removed option to change refresh timing
- new cache manager (removes only files, not directories)
- added one additional (smaller) option for cache size
- experimental support for external scripts using artistslideshow
- experimental support for internet streams

v1.2.0
- added ability to use local or remote images
- added priority image control to use local first, remote first, or both
- added option to restrict downloads to 16:9 images
- added option to have slideshow refresh after every image download or after x seconds
- added option for override folder that will be showed instead of artists images
- updated logic to refresh images after all are downloaded